# revolutiontech.ca

./: .coveragerc  .env-sample  .gitignore  .travis.yml  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  tasks.py  zappa_callbacks.py  zappa_settings.json.enc
.github/workflows/: ci.yml  deploy.yml
basecategory/: admin.py  models.py  tests.py  views.py
basecategory/migrations/: 0001_initial.py  0002_auto_20200412_2132.py
basecategory/templates/: base.html  category-page.html  home.html  item-page.html
basecategory/templates/includes/: hero-unit.html  item-short-name.html  item-short.html
games/: admin.py  models.py  tests.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_gamevideo.py  0003_gamemedia.py  0004_game_visible.py  0005_auto_20150811_0639.py  0006_auto_20160919_0008.py  0007_auto_20200412_2132.py
productions/: admin.py  models.py  tests.py  urls.py  views.py
productions/migrations/: 0001_initial.py  0002_productionvideo.py  0003_productionmedia.py  0004_production_visible.py  0005_auto_20150811_0639.py  0006_auto_20160919_0008.py  0007_auto_20200412_2132.py
revolutiontech/: .coveragerc  manage.py  settings.py  tests.py  urls.py  wsgi.py  zappa_settings.json.enc
revolutiontech/basecategory/: admin.py  models.py  tests.py  views.py
revolutiontech/basecategory/migrations/: 0001_initial.py
revolutiontech/games/: admin.py  models.py  tests.py  urls.py  views.py
revolutiontech/productions/: admin.py  models.py  tests.py  urls.py  views.py
revolutiontech/revolutiontech/: custom_storages.py  settings.py  tests.py  urls.py  wsgi.py
revolutiontech/settings/: __init__.py  base.py  prod.py
revolutiontech/software/: admin.py  models.py  tests.py  urls.py  views.py
software/: admin.py  models.py  tests.py  urls.py
software/migrations/: 0001_initial.py  0002_softwarevideo.py  0003_softwaremedia.py  0004_software_visible.py  0005_auto_20150811_0639.py  0006_auto_20160919_0008.py  0007_auto_20200412_2132.py
static/css/: foundation.css  revolutiontech.css
static/js/: facebook-sdk.js  filter.js  slick-category-page.js  slick-item-page.js
templates/: base.html  category-page.html  category_page.html  home.html  item-page.html  item_page.html
templates/includes/: badges.html  hero-unit.html  hero_unit.html  image-rotator.html  item-short.html  item_short.html  players.html
(+25 files in other folders)
