[tool.poetry]
name = "revolutiontech.ca"
version = "0.1.0"
description = "Revolution Technologies website"
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.0"
zappa = "^0.51.0"
Pillow = "^7.1.2"
django-classbasedsettings = "^1.5.0"
python-memcached = "^1.59"
sorl-thumbnail = "^12.6.3"
django-ordered-model = "^3.3.0"
django-s3-storage = "^0.13.0"
python-dotenv = "^0.12.0"
django-s3-sqlite = "^0.0.3"

[tool.poetry.dev-dependencies]
coverage = "^5.1"
django-pigeon = "^0.3.0"
black = "^19.10b0"
pyupgrade = "^2.0"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
