[tool.poetry]
name = "revolutiontech.ca"
version = "0.1.0"
description = "Revolution Technologies website"
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.1"
zappa = "^0.51.0"
Pillow = "^7.2.0"
python-memcached = "^1.59"
sorl-thumbnail = "^12.6.3"
django-ordered-model = "^3.4.1"
django-s3-storage = "^0.13.4"
python-dotenv = "^0.14.0"
django-s3-sqlite = "^0.0.3"
django-configurations = "^2.2"

[tool.poetry.dev-dependencies]
coverage = "^5.2"
django-pigeon = "^0.3.0"
black = "^20.8b1"
pyupgrade = "^2.7"
isort = "^5.5.4"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
