[tool.poetry]
name = "revolutiontech.ca"
version = "0.1.0"
description = "Revolution Technologies website"
authors = ["Lucas Connors <lucas@revolutiontech.ca>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
Django = "~3.2"
zappa = "^0.54.0"
Pillow = "^8.4.0"
python-memcached = "^1.59"
sorl-thumbnail = "^12.7.0"
django-ordered-model = "^3.4.3"
django-s3-storage = "^0.13.5"
python-dotenv = "^0.19.1"
django-s3-sqlite = "^0.0.3"
django-configurations = "^2.3"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
django-pigeon = "^0.4.0"
opstrich = "^0.6.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target_version = ["py38"]

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
